# EthDenver2025

./: .env.template  .gitignore  .gitmodules  README.md  adev_config.yaml  pyproject.toml
bounties/: README.md  ethdenver-prizes-intermediate.md  sponsor_bounties.json
data/: README.md.template  sponsor_config.yaml
data/bounties/: README.md  ethdenver-prizes.txt  sponsor_bounties.json
data/specs/fsms/: README.md  asylum_abci_app.mmd
git_scraper/: service.yaml
scripts/: bounties_READMA_to_json.py  create_envs_from_bounties.py  fsm_spec_to_mermaid.py  generate_protocols.sh  parse_bounties.py
specs/fsms/mermaid/: agent_registration_abci_app.mmd  autonomous_fund_abci_app.mmd  ceramic_read_abci_app.mmd  check_if_paid.mmd  component_loading_abci_app.mmd  cow_orders_abci_app.mmd  decentralized_watchtower_abci_app.mmd  dummy_abci_app.mmd  dynamic_nft_abci_app.mmd  el_collectooorr_abci_app.mmd  generic_scoring_abci_app.mmd  governatooorr_abci_app.mmd  kink_link_abci_app.mmd  liquidation_station_abci_app.mmd  liquidity_provision_abci_app.mmd  liquidity_trader_abci_app.mmd  market_manager_abci_app.mmd  path_switch_abci_app.mmd  plantation_abci_app.mmd  plantation_station_abci_app.mmd  price_prophet_abci_app.mmd  proposal_collector_abci_app.mmd  proposal_voter_abci_app.mmd  qs_orchestrator_abci_fsm.mmd  rysk_roller_abci_app.mmd  safe_deployment_abci_app.mmd  solver_fsm.mmd  staking_abci_app.mmd  task_submission_abci_app.mmd  tsunami_abci_app.mmd  tsunami_chained_skill_abci_app.mmd
specs/fsms/pre-existing/: check_if_paid.mmd
specs/protocols/: telegram.yaml
(+37 files in other folders)
