[tool.poetry]
name = "agent_asylum"
version = "0.1.0"
description = ""
authors = ["eightballer"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
open-aea-ledger-solana = "==1.64.0"
open-aea-ledger-cosmos = "==1.64.0"
open-aea-ledger-ethereum = "==1.64.0"
open-aea = "==1.64.0"
open-aea-cli-ipfs = "==1.64.0"
open-aea-test-autonomy = "==0.19.4"
open-autonomy = "==0.19.4"
autonomy-dev = {version = "==0.2.141", extras = ["all"]}
python-telegram-bot = "<=21"
rich = "^13.9.4"
openai = "^1.64.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools"]
